# raphaeldarley.com

./: Cargo.toml
content/: index.html
content/blog/: test.md  test2.md
content/keys/: personal-2024
content/templates/: blog.html  blog_list.html
src/: blog.rs  keys.rs  lib.rs  main.rs
