[package]
name = "raphaeldarley"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
include_dir = "0.7.4"
markdown = "1.0.0-alpha.18"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-service = "0.3.2"
tracing-subscriber = "0.3.18"
